# mosnix

./: CMakeLists.txt  LICENSE  README.md
doc/: fatfs.md  ramfs.md  shell.md  syscalls.dox  syscalls.md
include/: CMakeLists.txt  dirent.h  errno.h  fcntl.h  getopt.h  time.h  unistd.h
include/bits/: CMakeLists.txt  errno.h  fcntl.h  stat.h  syscall.h  unistd.h
include/mosnix/: CMakeLists.txt  attributes.h  config.h  devices.h  devnum.h  file.h  inode.h  kmalloc.h  printk.h  proc.h  sched.h  sem.h  syscall.h  util.h
include/sys/: CMakeLists.txt  mount.h  stat.h  syscall.h  sysmacros.h  types.h  utsname.h
libc-mosnix/: CMakeLists.txt  dirent.c  fcntl.c  getchar.c  getopt.c  link.ld  mkdir.c  mount.c  open.c  putchar.c  startup.S  stat.c  strerror.c  syscall.S  syscall2.S  time.c  uname.c  unistd.c  yield.c
os/: CMakeLists.txt  dir.c  dispatch.c  fd.c  file.c  ident.c  inode.c  kmalloc.c  main.c  mount.c  notimp.c  printk.c  proc.c  sched.c  sem.c  strerror.c  switcher.S  time.c  uname.c  util.c
os/drivers/: devices.c  devices.h
os/drivers/misc/: misc.h  null.c
os/drivers/sdcard/: sdasm.S  sdcard.c  sdcard.h
os/drivers/spi/: spi.h
os/drivers/tty/: basictty.c  console.h
os/fs/fat/: fatdefs.h  fatfs.c  fatfs.h  fatutils.c  fatutils.h
os/fs/ram/: ramfs.c  ramfs.h
rootfs/: README.md  etc  root  usr
rootfs/dev/: console  full  mmcblk0  null  tty  tty0  zero
rootfs/home/: user
rootfs/mnt/: sd
rootfs/var/: tmp
shell/: CMakeLists.txt  README.md  cd.c  command.c  command.h  div10.S  fstab.h  link-eater.ld  link-sim.ld  ls.c  main.c  mount.c  print.c  print.h  pwd.c  rootfs.c  uname.c
tools/bits/: errno.txt  syscall.txt
tools/generate/: Makefile  genbits.py  gendecl.py  gendispatch.py  generrno.py  genstrerror.py  gentools.py  genunistdc.py  genunistdh.py
tools/rootfs/: Makefile  packrootfs.py
